# ts_forecasting

./: .dockerignore  .flake8  .gitignore  LICENSE  README.md  pyproject.toml
.devcontainer/: Dockerfile  devcontainer.json
.github/workflows/: main.yml
experiments/: Hello ML world -- cifar.ipynb  Hello ML world -- mnist.ipynb
inria/helloworld/: datamodules.py  models.py  trainer_args.py
tests/: conftest.py  test_datamodules.py  test_models.py
